--- a/deployments/cluster-setup/cloudflared/cloudflared-deployment.yaml
+++ b/deployments/cluster-setup/cloudflared/cloudflared-deployment.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: cloudflared
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,12 +25,15 @@ spec:
             - --metrics
             - 0.0.0.0:2000
             - run
-          args:
-            - --token
-            - <token>
           image: cloudflare/cloudflared:latest
           name: cloudflared
           ## resource limits by copilot
+          env:
+          - name: TUNNEL_TOKEN
+            valueFrom:
+              secretKeyRef:
+                name: cloudflare-tunnel-token
+                key: token
           resources:
             limits:
               memory: "128Mi"
