--- a/deployments/mediacenter/helm/ombi/values.yaml
+++ b/deployments/mediacenter/helm/ombi/values.yaml
@@ -1,4 +1,3 @@
-
 #
 # IMPORTANT NOTE
 #
@@ -6,8 +5,9 @@
 # https://github.com/k8s-at-home/library-charts/tree/main/charts/stable/common/values.yaml
 #
 
+
 image:
-  repository: linuxserver/lidarr
+  repository: linuxserver/ombi
   tag: latest
   pullPolicy: IfNotPresent
 
@@ -15,7 +15,6 @@ env:
   TZ: Europe/Zurich
   PUID: 1030
   PGID: 100
-
 service:
   main:
     enabled: true
@@ -24,8 +23,8 @@ service:
   ports:
     http:
       enabled: true
-      port: 8686
-      targetPort: 8686
+      port: 3579 
+      targetPort: 3579 
       protocol: HTTP
 
 ingress:
@@ -35,50 +34,18 @@ ingress:
     nameOverride:
     annotations:
       traefik.ingress.kubernetes.io/router.entrypoints: websecure
-      
     labels: {}
-    
     ingressClassName:  traefik # "nginx"
     hosts:
-      
-    - host: lidarr.gygax.cloud
-      paths:
-      - path: /
-        pathType: Prefix
-        service:
-          name: lidarr
-          port: 8686
-probes:
-  liveness:
-    enabled: true
-    custom: true
-    spec:
-      exec:
-        command:
-        - /usr/bin/env
-        - bash
-        - -c
-        - curl --fail localhost:8686/api/v1/system/status?apiKey=`IFS=\> && while
-          read -d \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done < /config/config.xml`
-      failureThreshold: 5
-      initialDelaySeconds: 60
-      periodSeconds: 10
-      successThreshold: 1
-      timeoutSeconds: 10
-persistence:
-  data:
-    enabled: true
-    type: pvc
-    mountPath:  /data # /config
-    readOnly: false
-    nameOverride: data
-    storageClass: # "-"
-    existingClaim: media-pvc # your-claim
-    subPath: # some-subpath
-    accessMode: ReadWriteMany
-    size: 5Ti
-    retain: true
+      - host: ombi.gygax.cloud
+        paths:
+          - path: /
+            pathType: Prefix
+            service:
+              name: ombi
+              port: 3579 
 
+persistence:
   config:
     enabled: true
     type: pvc
@@ -90,7 +57,7 @@ persistence:
     subPath: # some-subpath
     accessMode: ReadWriteOnce
     size: 1Gi
-    retain: false
+    retain: true
 
 metrics:
   enabled: false
