--- a/deployments/mediacenter/helm/stash/values.yml
+++ b/deployments/mediacenter/helm/stash/values.yml
@@ -4,11 +4,10 @@
 # This chart inherits from our common library chart. You can check the default values/options here:
 # https://github.com/k8s-at-home/library-charts/tree/main/charts/stable/common/values.yaml
 #
-# helm install radarr k8s-home-lab/radarr
-
+# helm install stash k8s-at-home/stash -f stash/values.yml
 
 image:
-  repository: linuxserver/radarr
+  repository: stashapp/stash
   tag: latest
   pullPolicy: IfNotPresent
 
@@ -25,8 +24,8 @@ service:
   ports:
     http:
       enabled: true
-      port: 7878
-      targetPort: 7878
+      port: 9999
+      targetPort: 9999
       protocol: HTTP
 
 ingress:
@@ -35,17 +34,17 @@ ingress:
     primary: true
     nameOverride:
     annotations:
-      traefik.ingress.kubernetes.io/router.entrypoints: websecure
+        traefik.ingress.kubernetes.io/router.entrypoints: websecure
     labels: {}
     ingressClassName:  traefik # "nginx"
     hosts:
-      - host: radarr.gygax.cloud
+      - host: stash.gygax.cloud
         paths:
           - path: /
             pathType: Prefix
             service:
-              name: radarr
-              port: 7878
+              name: stash
+              port: 9999
 
 persistence:
   data:
@@ -55,16 +54,16 @@ persistence:
     readOnly: false
     nameOverride: data
     storageClass: # "-"
-    existingClaim: media-pvc # your-claim
+    existingClaim: nsfw-pvc # your-claim
     subPath: # some-subpath
     accessMode: ReadWriteMany
-    size: 5Ti
+    size: 1Ti
     retain: true
-
+  
   config:
     enabled: true
     type: pvc
-    mountPath:  /config # /config
+    mountPath:  /root/.stash # /config
     readOnly: false
     nameOverride: config
     storageClass:  longhorn # "-"
