--- a/deployments/cluster-setup/traefik/01-traefik-issuer-deployment.yaml
+++ b/deployments/cluster-setup/traefik/01-traefik-issuer-deployment.yaml
@@ -1,4 +1,3 @@
-
 ---
 apiVersion: v1
 kind: Namespace
@@ -17,21 +16,11 @@ spec:
   resources:
     requests:
       storage: 128Mi
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: cloudflare-api-credentials
-#   namespace: traefik
-# type: Opaque
-# stringData:
-#   email: <email>
-#   api-token: <api-token>
 ---
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: cloudflare
+  name: azuredns
   namespace: traefik
 spec:
   acme:
@@ -39,24 +28,31 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: fabian@gygax.tech
     privateKeySecretRef:
-      name: gygax-cloud-wildcard-pk
+      name: gygax-cloud-wildcard-pk-azure
     solvers:
       - dns01:
-          cloudflare:
-            email: fabian@gygax.tech
-            apiTokenSecretRef:
-              name: cloudflare-api-credentials
-              key: api-token
+          azureDNS:
+            clientID: 301cd847-3140-456e-a205-c5e591e529b9
+            clientSecretSecretRef:
+              # The following is the secret we created in Kubernetes. Issuer will use this to present challenge to Azure DNS.
+              name: azuredns-config
+              key: client-secret
+            subscriptionID: 01086eaa-80d0-42d1-84a3-23563f1a6691
+            tenantID: cf3ccd07-66cb-4e67-8a54-bc942658a722
+            resourceGroupName: gygax-tech-dns
+            hostedZoneName: gygax.cloud
+            # Azure Cloud Environment, default to AzurePublicCloud
+            environment: AzurePublicCloud
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: wildcard-gygax-cloud-cert
+  name: gygax-cloud-wildcard-cert-data-azure
   namespace: traefik
 spec:
-  secretName: gygax-cloud-wildcard-cert-data
+  secretName: gygax-cloud-wildcard-cert-data-azure
   dnsNames:
     - "*.gygax.cloud"
   issuerRef:
-    name: cloudflare
+    name: azuredns
     kind: Issuer
