--- a/deployments/cluster-setup/traefik/traefik-helm-values.yaml
+++ b/deployments/cluster-setup/traefik/traefik-helm-values.yaml
@@ -16,8 +16,11 @@ ports:
       default: true
     exposedPort: 80
     protocol: TCP
-    redirectTo:
-      port: websecure
+    redirections:
+      entryPoint:
+        to: websecure
+        scheme: https
+        permanent: true
 
   websecure:
     port: 443
@@ -32,7 +35,7 @@ ports:
 tlsStore:
   default:
     defaultCertificate:
-      secretName: gygax-cloud-wildcard-cert-data
+      secretName: gygax-cloud-wildcard-cert-data-azure
 
 service:
   enabled: true
@@ -40,17 +43,17 @@ service:
   type: LoadBalancer
   annotations:
     metallb.universe.tf/loadBalancerIPs: 172.18.1.51
-env:
-  - name: CF_API_EMAIL
-    valueFrom:
-      secretKeyRef:
-        key: email
-        name: cloudflare-api-credentials
-  - name: CF_API_KEY
-    valueFrom:
-      secretKeyRef:
-        key: api-token
-        name: cloudflare-api-credentials
+# env:
+#   - name: CF_API_EMAIL
+#     valueFrom:
+#       secretKeyRef:
+#         key: email
+#         name: cloudflare-api-credentials
+#   - name: CF_API_KEY
+#     valueFrom:
+#       secretKeyRef:
+#         key: api-token
+#         name: cloudflare-api-credentials
 
 ingressRoute:
   dashboard:
