complete helm rework

--- a/deployments/mediacenter/1_storage/4_nfs-media-backup-pv-and-pvc.yaml
+++ b/deployments/mediacenter/1_storage/4_nfs-media-backup-pv-and-pvc.yaml
@@ -28,6 +28,6 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  volumeName: media-backup-pvc
+  volumeName: media-backup-pv
   storageClassName: ""
 # Persistent Volume Claim spec including access modes, resources requests, and storage class name follow
